# multicore

./: .gitignore  CMakeLists.txt  README.md  main.c  main.h  mpu6050.h  pt_cornell_rp2040_v1_3.h  temp.c  temp.h  time_management.h
